# detalizations-tauri

./: .eslintrc  .gitignore  .prettierrc  README.md  bootstrap.sh  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
.trunk/: actions  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
src/: App.tsx  Body.tsx  Header.tsx  Info.tsx  Styled.tsx  enums.ts  main.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/sidecars/: .gitignore  bootstrap.sh  price.py  requirements.txt
src-tauri/src/: detailing.rs  helpers.rs  main.rs  make_ozon_read_marketplace.rs  make_wildberries_read_marketplace.rs  make_yandex_read_marketplace.rs  price_getter.rs  read.rs  read_excel.rs  structs.rs  write.rs
src-tauri/src/detailing/: files.rs  make_ozon_read_marketplace.rs  make_wildberries_read_marketplace.rs  make_yandex_read_marketplace.rs  read.rs  read_excel.rs  structs.rs  write.rs
src-tauri/src/price_getter/: get_price.rs  structs.rs  update_price.rs  write_price_list.rs
src/Body/: Detailing.tsx  Price.tsx
src/Body/Detailing/: Confirm.tsx  Marketplace.tsx  Month.tsx  OutputFile.tsx  SelectFile.tsx
src/Body/Detailing/OutputFile/: NewFile.tsx  SelectFile.tsx
src/Body/Price/: Confirm.tsx  SelectFolder.tsx
